--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div id="board" class="board">
 		<h1>Kanban board</h1>
 		<button class="create-column">Add a column</button>
-		<div class="column-container clearfix"></div>
+		<div class="column-container"></div>
 	</div>
 
     <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
